elists add new event_detail template

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,7 +15,7 @@
      <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     {% if title %}
-        <title>Блог клуба {{ title }}</title>
+        <title>{{ title }}</title>
     {% else %}
         <title>Make your event</title>
     {% endif %}
